# qa_guru_16_home_work

./: README.md  pyproject.toml
