[tool.poetry]
name = "qa-guru-16-home-work"
version = "0.1.0"
description = ""
authors = ["MyLadyDarkness <Cleopathra@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
selene = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
